--- a/04_modelviz.qmd
+++ b/04_modelviz.qmd
@@ -153,7 +153,7 @@ predicts_viz %>%
     facet_grid(Power ~ RelDist,
                labeller = as_labeller(c(levels2text_RelDist, levels2text_pow))) +
     geom_point(size = 2.2) +
-    geom_errorbar(aes(ymin = conf.low, ymax = conf.high), width = .2) +
+    geom_errorbar(aes(ymin = conf.low, ymax = conf.high), width = .2, linewidth = .3) +
     geom_errorbar(aes(ymin = conf.low_50, ymax = conf.high_50), width = 0, linewidth = 1) +
     theme_bw() + 
     #geom_line(aes(group = Power)) +
@@ -194,7 +194,7 @@ comparisons_viz %>%
     geom_errorbar(aes(ymin = conf.low_50, ymax = conf.high_50), width = 0, linewidth = 1.5, alpha = .8, position = position_dodge(.9)) +
     theme_bw() + 
     #geom_line() +
-    ylab("Probability difference\n(compared to neutral stance)") +
+    ylab("Probability difference\n(vs. neutral stance)") +
     theme(text = element_text(size = 26)) +
     scale_x_discrete(labels = levels2text_pron) +
     scale_color_discrete(name = "Stance", labels = c("Neg", "Pos"))
@@ -204,8 +204,48 @@ ggsave(here("output", "compare_stanceh_by_dyad.svg"), width = 868L, height = 546
 
 ```{r}
 comparisons_viz %>%
+    filter(term == "StanceH", contrast %in% c("Neg -"), is.na(StanceS)) %>%
+    ggplot(aes(x = group, y = estimate, group = contrast)) +
+    geom_hline(yintercept = 0) +
+    facet_grid(Power ~ RelDist,
+               labeller = as_labeller(c(levels2text_RelDist, levels2text_pow))) +
+    geom_point(size = 2.2) +
+    geom_errorbar(aes(ymin = conf.low, ymax = conf.high), width = .2, alpha = .8, linewidth = .3) +
+    geom_errorbar(aes(ymin = conf.low_50, ymax = conf.high_50), width = 0, linewidth = 1.5, alpha = .8) +
+    theme_bw() + 
+    geom_line() +
+    ylab("Probability difference\n(negative vs. neutral stance)") +
+    theme(text = element_text(size = 26)) +
+    scale_x_discrete(labels = levels2text_pron)
+ggsave(here("output", "compare_stanceh_negvsnone_by_dyad.svg"), width = 868L, height = 546L, units = "px")
+```
+
+```{r}
+comparisons_viz %>%
+    filter(term == "StanceH", contrast %in% c("Pos -"), is.na(StanceS)) %>%
+    ggplot(aes(x = group, y = estimate, group = contrast)) +
+    geom_hline(yintercept = 0) +
+    facet_grid(Power ~ RelDist,
+               labeller = as_labeller(c(levels2text_RelDist, levels2text_pow))) +
+    geom_point(size = 2.2) +
+    geom_errorbar(aes(ymin = conf.low, ymax = conf.high), width = .2, alpha = .8, linewidth = .3) +
+    geom_errorbar(aes(ymin = conf.low_50, ymax = conf.high_50), width = 0, linewidth = 1.5, alpha = .8) +
+    theme_bw() + 
+    geom_line() +
+    ylab("Probability difference\n(positive vs. neutral stance)") +
+    theme(text = element_text(size = 26)) +
+    scale_x_discrete(labels = levels2text_pron)
+ggsave(here("output", "compare_stanceh_posvsnone_by_dyad.svg"), width = 868L, height = 546L, units = "px")
+
+```
+
+```{}
+```
+
+```{r}
+comparisons_viz %>%
     filter(term == "StanceS", contrast %in% c("Pos -"), is.na(StanceH)) %>%
-    ggplot(aes(x = group, y = estimate, col = contrast)) +
+    ggplot(aes(x = group, y = estimate)) +
     geom_hline(yintercept = 0) +
     facet_grid(Power ~ RelDist,
                labeller = as_labeller(c(levels2text_RelDist, levels2text_pow))) +
@@ -214,7 +254,7 @@ comparisons_viz %>%
     geom_errorbar(aes(ymin = conf.low_50, ymax = conf.high_50), width = 0, linewidth = 2) +
     theme_bw() + 
     geom_line() +
-    ylab("Probability difference\n(compared to neutral stance)") +
+    ylab("Probability difference\n(positive vs. neutral stance)") +
     theme(text = element_text(size = 26)) +
     scale_x_discrete(labels = levels2text_pron) +
     theme()
